--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-23 Kenneth Nielsen <k.nielsen81@gmail.com>
+
+	* da.po: Updated Danish translation by Ask H. Larsen
+
 2009-03-21  Goran Rakic <grakic@devbase.net>
 
 	* sr.po, sr@latin.po: Updated Serbian translation by Miloš Popović.
