--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-25  Shankar Prasad  <svenkate@redhat.com>
+
+        * kn.po: Updated few correction to Kannada translations.
+
 2009-03-23 Kenneth Nielsen <k.nielsen81@gmail.com>
 
 	* da.po: Updated Danish translation by Ask H. Larsen
