Wait at most 1 second for http mimetype check.
2009-03-31  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.c:
        (handle_netscape_url_drop_ask_cb):
        (handle_netscape_url_drop_timeout):
        (fm_directory_view_handle_netscape_url_drop):
	Wait at most 1 second for http mimetype check.



svn path=/trunk/; revision=15156

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,14 @@
 
         * src/file-manager/fm-directory-view.c:
         (handle_netscape_url_drop_ask_cb):
+        (handle_netscape_url_drop_timeout):
+        (fm_directory_view_handle_netscape_url_drop):
+	Wait at most 1 second for http mimetype check.
+
+2009-03-31  Alexander Larsson  <alexl@redhat.com>
+
+        * src/file-manager/fm-directory-view.c:
+        (handle_netscape_url_drop_ask_cb):
         (fm_directory_view_handle_netscape_url_drop):
 	Check http mimetype asynchronously to avoid hanging
 
