Update for relase
2009-04-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for relase



svn path=/trunk/; revision=15159

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Major changes in 2.26.1 are:
+* Better handling of thumbnail scaling
+* Support XDS in list view
+* Make session loading work
+* Start Nautilus on requested screen
+* Fix crashes
+* Fix possible infinite layout loop in compact mode
+* Update fallback icon to not look like gnome 1.x
+* Fix some cases of sync i/o
+* Handle non-gvfs uris like e.g. mailto and http links with queries in links
+
 Major changes in 2.26.0 are:
 * Stable release
 * Fix crash due to broken gdk-pixbuf tga loader
