--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-02  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for relase
+
 2009-04-01  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-directory-private.h:
