Post release version bump
2009-04-02  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.26.1 ===


svn path=/trunk/; revision=15160

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-04-02  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.26.1 ===
+
+2009-04-02  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for relase
 
