Updated Greek translation (Thanos Lefteris)
svn path=/trunk/; revision=15162

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-03  Simos Xenitellis  <simos@gnome.org>
+
+	* el.po: Updated Greek translation (Thanos Lefteris).
+
 === nautilus 2.26.1 ===
 
 2009-03-30  Baris Cicek  <baris@teamforce.name.tr>
