Changes by Bruce Cowan <bcowan@fastmail.co.uk> to fix the British English
2009-04-07  Philip Withnall  <philip@tecnocode.co.uk>

	* en_GB.po: Changes by Bruce Cowan <bcowan@fastmail.co.uk> to 
fix the
	British English date formats. (Closes: #578189)


svn path=/trunk/; revision=15168

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-07  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* en_GB.po: Changes by Bruce Cowan <bcowan@fastmail.co.uk> to fix the
+	British English date formats. (Closes: #578189)
+
 2009-04-03  Simos Xenitellis  <simos@gnome.org>
 
 	* el.po: Updated Greek translation (Thanos Lefteris).
