Make sure PackageKit is active before showing install dialog. Patch from
2009-04-08  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-mime-actions.c:
	Make sure PackageKit is active before showing
	install dialog.
	Patch from  James Westby



svn path=/trunk/; revision=15171

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-04-08  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-mime-actions.c:
+	Make sure PackageKit is active before showing
+	install dialog.
+	Patch from  James Westby
+
+2009-04-08  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-directory-view.c:
 	(add_script_to_scripts_menus):
 	Use gtk_action_group_add_action_with_accel so that we
