Add column for location. (#374661)
2009-04-08  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-column-utilities.c:
	(get_builtin_columns):
	Add column for location. (#374661)


svn path=/trunk/; revision=15172

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-04-08  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-column-utilities.c:
+	(get_builtin_columns):
+	Add column for location. (#374661)
+
+2009-04-08  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-mime-actions.c:
 	Make sure PackageKit is active before showing
 	install dialog.
