Update the eggtreemultidnd.[ch] from libegg trunk (#560335).
2009-04-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* cut-n-paste-code/libegg/eggtreemultidnd.c:
	(egg_tree_multi_drag_source_get_type),
	(egg_tree_multi_drag_motion_event):
	Update the eggtreemultidnd.[ch] from libegg trunk (#560335).

svn path=/trunk/; revision=15173

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-04-08  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* cut-n-paste-code/libegg/eggtreemultidnd.c:
+	(egg_tree_multi_drag_source_get_type),
+	(egg_tree_multi_drag_motion_event):
+	Update the eggtreemultidnd.[ch] from libegg trunk (#560335).
+
 2009-04-08  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-column-utilities.c:
