--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-04-09  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* cut-n-paste-code/libegg/eggsmclient-xsmp.c: (save_state),
+	(set_properties), (ptrarray_prop):
+	* cut-n-paste-code/libegg/eggsmclient.c:
+	(egg_sm_client_get_option_group):
+	Update the EggSMClient code from libegg trunk.
+
 2009-04-08  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* cut-n-paste-code/libegg/eggtreemultidnd.c:
