revert string freeze break.
2009-04-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* cut-n-paste-code/libegg/eggsmclient.c:
	(egg_sm_client_get_option_group): revert string freeze break.

svn path=/trunk/; revision=15175

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-04-09  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* cut-n-paste-code/libegg/eggsmclient.c:
+	(egg_sm_client_get_option_group): revert string freeze break.
+
+2009-04-09  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* cut-n-paste-code/libegg/eggsmclient-xsmp.c: (save_state),
 	(set_properties), (ptrarray_prop):
 	* cut-n-paste-code/libegg/eggsmclient.c:
