Translation updated by Mattias Põldaru
2009-04-12  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Mattias Põldaru

svn path=/trunk/; revision=15177

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-12  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Mattias Põldaru
+
 2009-04-07  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* en_GB.po: Changes by Bruce Cowan <bcowan@fastmail.co.uk> to fix the
