--- a/po/et.po
+++ b/po/et.po
@@ -23,7 +23,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
 "POT-Creation-Date: 2009-03-07 14:18+0000\n"
-"PO-Revision-Date: 2009-03-12 22:59+0300\n"
+"PO-Revision-Date: 2009-04-02 10:13+0300\n"
 "Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -1752,7 +1752,7 @@ msgid "The destination is read-only."
 msgstr "Sihtkoht on kirjutuskaitsega."
 
 msgid "Moving \"%B\" to \"%B\""
-msgstr "\"%B\" ümbernimetamine \"%B\"-ks"
+msgstr "\"%B\" liigutamine sihtkohta \"%B\""
 
 msgid "Copying \"%B\" to \"%B\""
 msgstr "\"%B\" kopeerimine asukohta \"%B\""
