--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-13  Reşat SABIQ <tilde.birlik@gmail.com>
+
+        * crh.po: Updated Crimean Tatar (Crimean Turkish) translation.
+
 2009-04-12  Jorge Gonzalez  <jorgegonz@svn.gnome.org>   
 
 	* es.po: Updated Spanish translation
