Update for release
2009-04-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release


svn path=/trunk/; revision=15180

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-13  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2009-04-11  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c:
