--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.26.2 are:
+* Fix issue with default dnd type when dragging to a parent directory
+* Fix icon view RTL layout in compact view
+* Make sure spatial geometry is always saved when closing windows
+* Save and load custom accelerator maps
+* Check for PackageKit before showing dialog using it
+* Add "location" column
+* Show both unmount and eject in menus for mounts that support both
+
 Major changes in 2.26.1 are:
 * Better handling of thumbnail scaling
 * Support XDS in list view
