Don't show eject if not mounted.
2009-04-13  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-places-sidebar.c:
	(add_place):
	Don't show eject if not mounted.



svn path=/trunk/; revision=15181

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-04-13  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-places-sidebar.c:
+	(add_place):
+	Don't show eject if not mounted.
+
+2009-04-13  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
