Post release version bump
2009-04-13  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.26.2 ===


svn path=/trunk/; revision=15183

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,5 @@
+=== nautilus 2.26.2 ===
+
 2009-04-13  Reşat SABIQ <tilde.birlik@gmail.com>
 
         * crh.po: Updated Crimean Tatar (Crimean Turkish) translation.
