--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-04-13  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.26.2 ===
+
+2009-04-13  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-places-sidebar.c:
 	(add_place):
 	Don't show eject if not mounted.
