Set typeahead column to the name column.
2009-04-16  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-places-sidebar.c (nautilus_places_sidebar_init):
	Set typeahead column to the name column.


svn path=/trunk/; revision=15186

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-04-16  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-places-sidebar.c (nautilus_places_sidebar_init):
+	Set typeahead column to the name column.
+
+2009-04-16  Alexander Larsson  <alexl@redhat.com>
+
 	Bug 578468 – Change of font DPI setting does not effect desktop icons
 
 	* libnautilus-private/nautilus-icon-canvas-item.c:
