Bug 578983 – set_more_warnings check of WARNING_CFLAGS doesn't work
2009-04-16  Alexander Larsson  <alexl@redhat.com>

	Bug 578983 – set_more_warnings check of WARNING_CFLAGS doesn't work
	
	* configure.in:
	Actually check the options.


svn path=/trunk/; revision=15187

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-04-16  Alexander Larsson  <alexl@redhat.com>
 
+	Bug 578983 – set_more_warnings check of WARNING_CFLAGS doesn't work
+	
+	* configure.in:
+	Actually check the options.
+
+2009-04-16  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-places-sidebar.c (nautilus_places_sidebar_init):
 	Set typeahead column to the name column.
 
