--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-04-16  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Reversed check in last commit, fixed.
+
+2009-04-16  Alexander Larsson  <alexl@redhat.com>
+
 	Bug 578983 – set_more_warnings check of WARNING_CFLAGS doesn't work
 	
 	* configure.in:
