Comment out invalid pofile strings
msgfmt -c bs.po said:
bs.po:3783: number of format specifications in 'msgid' and 'msgstr[0]'
does not match msgfmt: found 1 fatal error
which meant branching was impossible

--- a/po/bs.po
+++ b/po/bs.po
@@ -3773,16 +3773,17 @@ msgstr "Uključuje/isključuje prikaz skrivenih datoteka u trenutnom prozoru"
 msgid "_Open with \"%s\""
 msgstr "_Otvori pomoću \"%s\""
 
-#. add the "open in new window" menu item
-#: src/file-manager/fm-directory-view.c:6229
-#: src/file-manager/fm-directory-view.c:6231
-#: src/file-manager/fm-tree-view.c:1110
-#, c-format
-msgid "Open in New Window"
-msgid_plural "Open in %d New Windows"
-msgstr[0] "Otvori u novom prozoru"
-msgstr[1] "Otvori u %d nova prozora"
-msgstr[2] "Otvori u %d novih prozora"
+# alexl: Commented this out because it made msgfmt -c complain
+##. add the "open in new window" menu item
+##: src/file-manager/fm-directory-view.c:6229
+##: src/file-manager/fm-directory-view.c:6231
+##: src/file-manager/fm-tree-view.c:1110
+##, c-format
+#msgid "Open in New Window"
+#msgid_plural "Open in %d New Windows"
+#msgstr[0] "Otvori u novom prozoru"
+#msgstr[1] "Otvori u %d nova prozora"
+#msgstr[2] "Otvori u %d novih prozora"
 
 #: src/file-manager/fm-directory-view.c:6238
 #, fuzzy
