--- a/po/et.po
+++ b/po/et.po
@@ -23,8 +23,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
 "POT-Creation-Date: 2009-03-07 14:18+0000\n"
-"PO-Revision-Date: 2009-04-02 10:13+0300\n"
-"Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
+"PO-Revision-Date: 2009-04-20 11:00+0300\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -63,13 +63,13 @@ msgid "Disable connection to session manager"
 msgstr "Seansihalduriga ühendumise keelamine"
 
 msgid "Specify file containing saved configuration"
-msgstr "Määra salvestatud seadistust sisaldav fail"
+msgstr "Salvestatud seadistusi sisaldava faili määramine"
 
 msgid "FILE"
 msgstr "FAIL"
 
 msgid "Specify session management ID"
-msgstr "Määra seansihalduse ID"
+msgstr "Seansihalduse ID määramine"
 
 msgid "ID"
 msgstr "ID"
