Remove a reference to SVN
Also, update the GIT info page link.

--- a/HACKING
+++ b/HACKING
@@ -1,15 +1,15 @@
 Hacking on Nautilus
 -------------------
 
-The Nautilus source tree is available from GNOME svn (svn.gnome.org) and 
+The Nautilus source tree is available from GNOME git (git.gnome.org) and 
 in releases on the GNOME FTP site
 (http://ftp.gnome.org/pub/GNOME/sources/nautilus/).
 
 If you plan to hack on Nautilus, please make sure you work from the
 Git version. The Git version can be checked from the GNOME git server.
-See http://live.gnome.org/GitMigration for details on how to get 
-started with GNOME Git. For details on how Nautilus uses git, see
-the README.commits file.
+See http://live.gnome.org/Git for details on how to get started with
+GNOME Git. For details on how Nautilus uses git, see the README.commits
+file.
 
 If you want to contribute in development discussions, please send mail
 to the nautilus mailing list: <nautilus-list@gnome.org>.  Archives and
