Add building tips link
Mention http://live.gnome.org/Nautilus/Development/Nautilus in the
README file.

--- a/README
+++ b/README
@@ -5,6 +5,8 @@ Installation
 
 See the 'INSTALL' file for installation instructions.  You will need a
 complete and up-to-date GNOME development environment to build nautilus.
+You can also find some building and installation tips at
+http://live.gnome.org/Nautilus/Development/Nautilus
 
 Hacking on Nautilus
 ===================
